# ai-betting-bot

./: .env.example  .gitignore  .vercelignore  BUSINESS_LAUNCH.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LIVE_DEPLOYMENT.md  Procfile  QUICK_START.md  README.md  RENDER_DEPLOYMENT.md  __init__.py  ai_model.py  analytics_dashboard.py  auth.py  auto_better.py  betting_model.pkl  betting_platforms.py  config.py  data_collector.py  deploy.sh  docker-compose.yml  heroku_config.py  i18n.py  landing_page.html  live_tracker.py  logger.py  main.py  marketing_materials.py  monetization.py  nginx.conf  payment_system.py  pyproject.toml  rate_limiter.py  real_time_analytics.py  render.yaml  requirements-heroku.txt  requirements.txt  scrapers.py  (+10 more)
api/: index.py
static/: manifest.json  mobile.css
templates/: index.html  index_clean.html
tests/: test_ai_model.py  test_scrapers.py
